--- a/css/basic_style.css
+++ b/css/basic_style.css
@@ -1,14 +1,14 @@
-body{
+body {
     background-color: #fff;
 }
 
-h1{
-    color: rgba(8, 141, 165, 1);
+h1 {
+    color:rgba(8, 141, 165, 1);
     margin-left: 100px;
     text-shadow: 1px .5 px 4 px rgba(0, 0, 0, 0.6);
 }
 
-.container{
+.container {
     width: 450px;
     height: 450px;
     background-color: #faebd7;
@@ -20,7 +20,7 @@ h1{
             SELECT ALL SQAURES IN THE ARRAY
      ------------------------------------*/
  .container .squares:nth-child(-n+4) {
-     background-image: url(../images/icons/icons.png);
+     background-image: url("../images/icons/smileyface.png");
      color:#fff;
      float:left;
      width:100px;
@@ -29,8 +29,59 @@ h1{
      border: 1px solid black;
      border-radius: 25%;
      cursor: pointer;
+     transition: transform .5 s ease-in-out;
  }           
 
  /*------------------------------------
             SELECT ALL SQAURES PARAGRAPH IN THE ARRAY
      ------------------------------------*/
+.squares:nth-child(-n+4) p{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 1.5em;
+    font-weight: 900;
+    text-align: center;
+    margin: 0;
+    text-shadow: 2px 1px 4px rgba(0, 0, 0, 0.8);
+}
+/*------------------------------------
+            INDIVIDUALLY SELECT A SQUARE IN THE ARRAY
+     ------------------------------------*/
+
+.squares:nth-child(1){
+         background:#4240ff;
+        
+ }
+.squares:nth-child(2){
+        background: #ab3fdd;
+
+}
+.squares:nth-child(3){
+        background: #ae163e;
+
+    }
+.squares:nth-child(4){
+        background: #00b200;
+    }
+
+/*------------------------------------
+      HOVER EFFECTS
+ ------------------------------------*/
+ .container .squares:nth-child(-n+4):hover {
+     background-image:url("../images/icons/smileyface2.png");
+
+ }
+ .squares:nth-child(1){
+    background-color:#13b444;
+   
+}
+.squares:nth-child(2){
+   background-color: #d861af;
+
+}
+.squares:nth-child(3){
+   background-color: #81205f;
+
+}
+.squares:nth-child(4){
+   background-color: #77b800;
+}
