--- a/css/basic_style.css
+++ b/css/basic_style.css
@@ -74,14 +74,14 @@ h1 {
     background-color:#13b444;
    
 }
-.squares:nth-child(2){
+.squares:nth-child(2):hover{
    background-color: #d861af;
 
 }
-.squares:nth-child(3){
+.squares:nth-child(3):hover{
    background-color: #81205f;
 
 }
-.squares:nth-child(4){
+.squares:nth-child(4):hover{
    background-color: #77b800;
 }
