--- a/css/basic_style3.css
+++ b/css/basic_style3.css
@@ -102,7 +102,7 @@ h1 {
  @keyframes race{
      0%,100%{
          transform:translateY(0px);
-         background-image: url("C:/Users/ericr/Desktop/project/images/Icons/smileyface2.png");
+         background-image: url("../images/icons/smileyface2.png");
      }
      50%{
          transform:translateY(330px);
